# pdm_utils

./: .gitignore  CONTRIBUTORS  Dockerfile  LICENSE  LICENSE.txt  README.md  cdd_pp.py  change_version.py  compare_databases.py  contributors.txt  contributors.txt~  control_version.py  environment.yml  export_database.py  freeze_database.py  import_phage.py  k_phamerate.py  k_schema_updates~  mmseqs_phamerate.py  phamerator_update_pipeline  phix_circle.py  phix_hue.py  requirements.txt  retrieve_database_updates.py  retrieve_draft_genomes.py  retrieve_ncbi_phage.py  retrieve_phagesdb_flatfiles.py  setup.cfg  setup.py  update_accession.py  update_author.py  update_cluster_new.py  update_datelastmodified.py  update_description.py  update_gene_description.py  update_host.py  update_host_cluster_status.py  update_phageid.py  update_phagename.py
dev_import_refactor/: Cds.py  Constants.py  DataGroup.py  Eval.py  FunctionsSimple.py  FunctionsTicket.py  Genome.py  GenomePair.py  MatchedCds.py  MatchedGenomes.py  Ticket.py  TicketCollection.py  Trna.py  compare_databases_partial.py  compare_tickets_to_phamerator.py  conda_setup.txt  evaluate_data.py  functions_evaluations.py  functions_flat_files.py  functions_general.py  functions_phagesdb.py  functions_phamerator.py  functions_tickets.py  import_phage_cli.py  misc_functions.py  misc_variables.py  prepare_flat_file_data.py  prepare_import_tickets.py  prepare_phamerator_data.py  prepare_tickets.py  py2_import_phage_for_eval_reports.py  py2_import_phage_partial.py  report_eval.py  setup.txt  temp.py  test_Cds.py  test_CdsPair.py  (+9 more)
(+739 files in other folders)
