[metadata]
license_file = LICENSE
name = pdm_utils
version = 0.9.21
author = Christian Gauthier
author_email = chg60@pitt.edu
description = MySQL phage genomics database management utilities
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/SEA-PHAGES/pdm_utils
project_urls =
    Documentation = https://pdm-utils.readthedocs.io/en/latest/
    Source = https://github.com/SEA-PHAGES/pdm_utils/
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    biopython == 1.77
    networkx >= 2.4
    paramiko >= 2.7.2
    pymysql == 0.9.3
    pyyaml >= 5.3.1
    sqlalchemy == 1.4.2
    tabulate >= 0.8.3
    urllib3 >= 1.25.8

[options.packages.find]
where = src
include =
    pdm_utils
    pdm_utils.classes
    pdm_utils.constants
    pdm_utils.functions
    pdm_utils.pipelines
exclude =

[options.entry_points]
console_scripts =
    pdm_utils = pdm_utils.__main__:main